--- a/ui/templates/error.html
+++ b/ui/templates/error.html
@@ -16,7 +16,10 @@
             </F3:check>
             <F3:check if="{{ isset(@db_log) }}">
                 <hr/>
-                <div class="well">{{ @db_log }}</div>
+                <div class="well">{{ @db_log }} </div>
             </F3:check>
+            <div class="center-block mt50 mw800 animated fadeIn">
+            	<a class="btn bg-warning" href="{{@BASE.'/dashboard'}} "> Home </a>
+            </div>
         </div>
     </div>
