--- a/ui/templates/register.html
+++ b/ui/templates/register.html
@@ -178,7 +178,7 @@
                         <!-- Registration Links -->
                         <div class="login-links">
                             <p>
-                                <a href="pages_forgotpw(alt).html" class="active hidden" title="Sign In">
+                                <a href="auth/forgot" class="active hidden" title="Sign In">
                                     Forgot Password?
                                 </a>
                             </p>
