--- a/ui/templates/layout.html
+++ b/ui/templates/layout.html
@@ -17,7 +17,7 @@
 <body class="error-page sb-l-o sb-r-c">
 <div id="main"> 
   <!-- Start: Topbar -->
-  <header id="topbar" class="alt">
+  <!--<header id="topbar" class="alt">
     <div class="topbar-left">
       <ol class="breadcrumb">
         <li class="crumb-active"> <a href="{{ @BASE }}/">{{@CONFIG.blog_title}}</a> </li>
@@ -26,10 +26,10 @@
         <li class="crumb-trail">Error {{@ERROR.code}}</li>
       </ol>
     </div>
-  </header>
+  </header>-->
   <!-- End: Topbar --> 
   <!-- Begin: Content -->
-  <section id="content" class="pn animated fadeIn" style="margin-top: 100px;">
+  <section id="content" class="pn animated fadeIn" style="margin-top: 50px;">
     <div class="container" id="main"> <include if="{{@ERROR && @ERROR.code != 400}}" href="templates/error.html"/> <include if="{{isset(@SUBPART)}}" href="{{'templates/'.@SUBPART}}"/> </div>
   </section>
   <!-- End: Content --> 
