--- a/app/ui/templates/includes/forms-bottom-scripts.html
+++ b/app/ui/templates/includes/forms-bottom-scripts.html
@@ -1,6 +1,7 @@
   <!-- Page Plugins -->
-  <script src="assets/admin-tools/admin-forms/js/jquery.validate.min.js"></script>
-  <script src="assets/admin-tools/admin-forms/js/jquery.steps.min.js"></script>
+  <base href="{{@SCHEME.'://'.@HOST.@BASE.'/'}}"/>
+  <script src="app/ui/assets/admin-tools/admin-forms/js/jquery.validate.min.js"></script>
+  <script src="app/ui/assets/admin-tools/admin-forms/js/jquery.steps.min.js"></script>
   <script type="text/javascript">
   jQuery(document).ready(function() {
 
