--- a/app/ui/templates/includes/forms-validation-script.html
+++ b/app/ui/templates/includes/forms-validation-script.html
@@ -1,8 +1,9 @@
+  <base href="{{@SCHEME.'://'.@HOST.@BASE.'/'}}"/>
   <!-- jQuery Validate Plugin-->
-  <script src="assets/admin-tools/admin-forms/js/jquery.validate.min.js"></script>
+  <script src="app/ui/assets/admin-tools/admin-forms/js/jquery.validate.min.js"></script>
 
   <!-- jQuery Validate Addon -->
-  <script src="assets/admin-tools/admin-forms/js/additional-methods.min.js"></script>
+  <script src="app/ui/assets/admin-tools/admin-forms/js/additional-methods.min.js"></script>
   
     <script type="text/javascript">
   jQuery(document).ready(function() {
